Mejorando pequeños detalles y errores en el css y SEO

--- a/index.html
+++ b/index.html
@@ -2,45 +2,31 @@
 <html lang="es">
 
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YEWQN11NJP"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-YEWQN11NJP');
-    </script>
-
-    <!-- meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="assets/img/favicon.png" type="image/png">
     <title>Angel Lizarzado</title>
 
-    <!--Meta Description-->
 
     <meta name="description" content="Portfolio Angel Lizarzado">
-
-    <!--Meta Keywords-->
     <meta name="keywords"
-        content="Portfolio, Angel Lizarzado, Angel, Lizarzado, MitsuDev, Mitsu, Portfolio Angel Lizarzado, Portfolio MitsuDev, Full-Stack, Programador web, Angel Lizarzado programador web, Angel Lizarzado Programador web Full-Stack, Angel Programador web full stack, Angel programador, Angel web">
+        content="Portfolio, Angel Lizarzado, Angel, Lizarzado, MitsuDev, Mitsu, Portfolio Angel Lizarzado, Portfolio MitsuDev, Full-Stack, Programador web, Angel Lizarzado programador web, Angel Lizarzado Programador web Full-Stack, Angel programador, Angel web">
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Angel Lizarzado Portfolio">
-    <meta itemprop="description" content="Portfolio Angel Lizarzado programador web full-stack">
-    <meta itemprop="image" content="http://i.ibb.co/https://i.ibb.co/M9QZc1L/Screenshot-10.png">
+    <meta name="description" content="Portfolio Angel Lizarzado programador web full-stack">
+    <meta name="image" content="{{ imageUrl }}">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://angel-lizarzado.web.app">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Angel Lizarzado Portfolio">
     <meta property="og:description" content="Portfolio Angel Lizarzado programador web full-stack">
-    <meta property="og:image" content="http://i.ibb.co/https://i.ibb.co/M9QZc1L/Screenshot-10.png">
+    <meta property="og:image" content="{{ imageUrl }}">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Angel Lizarzado Portfolio">
     <meta name="twitter:description" content="Portfolio Angel Lizarzado programador web full-stack">
-    <meta name="twitter:image" content="http://i.ibb.co/https://i.ibb.co/M9QZc1L/Screenshot-10.png">
+    <meta name="twitter:image" content="{{ imageUrl }}">
 
     <link rel="stylesheet" href="assets/css/bootstrap.css">
 
@@ -56,7 +42,7 @@
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container box_1620">
-                    Angel Lizarzado
+                    <a class="navbar-brand" href="#index">Angel Lizarzado</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -71,15 +57,12 @@
                                     de</a></li>
                             <li class="nav-item"><a class="nav-link" href="#experience">Experiencia</a></li>
                             <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
-                            <li class="nav-item"><a class="nav-link" href=""></a></li>
-
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
     </header>
-
 
     <!--================Home Banner =================-->
     <section class="home_banner_area" id="index">
@@ -89,7 +72,7 @@
                     <div class="banner_content">
                         <div class="media">
                             <div class="d-flex">
-                                <img src="assets/img/angel.png" alt="..." loading="lazy" alt="main_image">
+                                <img src="assets/img/angel.png" alt="Imagen de Angel Lizarzado">
                             </div>
                             <div class="media-body">
                                 <div class="personal_text tjust">
@@ -103,16 +86,12 @@
                                         desarrollo de aplicaciones web y moviles <br>
                                     </p>
 
-
-
                                     <ul class="list basic_info">
-                                        <li><a href="mailto:angel.lizarzado98@gmail.com" target="_blank"><i
-                                                    class="fa fa-envelope-o" aria-hidden="true"></i>Mail-Box</a></li>
+                                        <li><a href="mailto:angel.lizarzado98@gmail.com"><i class="fa fa-envelope-o"
+                                                    aria-hidden="true"></i>Mail-Box</a></li>
                                         <li><a href="" target="_blank"><i class="fa fa-location-arrow"
                                                     aria-hidden="true"></i>Barqusimeto - Venezuela</a></li>
                                     </ul>
-
-
 
                                     <ul class="list personal_social">
                                         <li><a href="https://github.com/Angel_Lizarzado" target="_blank"><i
@@ -139,13 +118,12 @@
                 <div class="col-lg-6">
                     <div class="welcome_text tjust">
                         <h4>Sobre mi</h4>
-                        <p>Soy un apasionado del diseño web y utilizo Python como lenguaje complementario para el
-                            backend de mis proyectos. Me encanta crear sitios web hermosos y funcionales que sean
-                            fáciles de usar y accesibles para todos los usuarios.<br>
+                        <p>Soy una persona autodidacta apasionada por el desarrollo web. Desde joven, me he dedicado a
+                            aprender y mejorar mis habilidades en front-end y back-end por mi cuenta. Aunque he
+                            explorado lenguajes como Python, mi enfoque actual es el desarrollo web y aplicaciones
+                            móviles. Recientemente, comencé a estudiar un máster en Inmune para especializarme y
+                            profundizar en mis conocimientos en este campo.</p>
 
-                            <br>Además de mi pasión por el diseño web y la programación, me considero una persona
-                            creativa y me encanta trabajar en proyectos con impacto positivo en la vida de las personas.
-                        </p>
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="wel_item">
@@ -207,7 +185,6 @@
                         </div>
                     </div>
                 </div>
-
 
 
             </div>
@@ -296,7 +273,7 @@
                                     </div>
                                     <div class="media-body">
                                         <h4>Desarrollo web Backend </h4>
-                                        <p> Comencé a aprender y utilizar php en mis proyectos dando a luz mis primeros
+                                        <p>Comencé a aprender y utilizar php en mis proyectos dando a luz mis primeros
                                             CMS <br>Duaca - Barquisimeto </p>
                                     </div>
                                 </div>
@@ -346,10 +323,11 @@
                             <h2>Angel Lizarzado</h2>
                         </div>
                         <p>
-                        <h2> ¡Hola! Saludos<br> </h2>
+                        <h2> ¡Hola! Saludos<br></h2>
                         <h5> ¿Tienes un proyecto?</h5>
                         <h5>¡Vamos a conectarnos, trabajo para aprender!</h5>
 
+                        </p>
 
                     </aside>
                 </div>
@@ -365,11 +343,10 @@
                             <li><a href="https://twitter.com/angel_lzdo"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://github.com/Angel-Lizarzado"><i class="fa fa-github"></i></a></li>
                             <li><a href="https://www.linkedin.com/in/mitsudev/"><i class="fa fa-linkedin"></i></a></li>
-                            <div class="f_title">
-                                <h5 style="margin-top:20px">Respondere lo mas pronto posible</h5>
-                            </div>
                         </ul>
-
+                        <div class="f_title">
+                            <h5 style="margin-top:20px">Respondere lo mas pronto posible</h5>
+                        </div>
                     </aside>
                 </div>
             </div>
@@ -379,6 +356,7 @@
     <script src="assets/js/jquery-3.3.1.min.js"></script>
     <script src="assets/js/scripts.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script type="module" src="assets/js/firebase.js"> </script>
 </body>
 
 </html>
