--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container box_1620">
-                    <a class="navbar-brand" href="#index">Angel Lizarzado</a>
+                    <a class="nav-link logo" href="#index">Angel Lizarzado</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
