--- a/index.html
+++ b/index.html
@@ -119,16 +119,15 @@
                     <div class="welcome_text tjust">
                         <h4>Sobre mi</h4>
                         <p>Soy una persona autodidacta apasionada por el desarrollo web. Desde joven, me he dedicado a
-                            aprender y mejorar mis habilidades en front-end y back-end por mi cuenta. Aunque he
+                            aprender y mejorar mis habilidades fullstack por cuenta propia. Aunque he
                             explorado lenguajes como Python, mi enfoque actual es el desarrollo web y aplicaciones
-                            móviles. Recientemente, comencé a estudiar un máster en Inmune para especializarme y
-                            profundizar en mis conocimientos en este campo.</p>
+                            móviles. Recientemente, curso el master de desarrollo full stack en inmune para especializarme en el campo </p>
 
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="wel_item">
                                     <i class="fa fa-files-o" aria-hidden="true"></i>
-                                    <h4>04</h4>
+                                    <h4>05</h4>
                                     <p> Proyectos <br> Hechos
                                     </p>
                                 </div>
@@ -141,7 +140,7 @@
                     <div class="tools_expert">
                         <div class="skill_main">
                             <div class="skill_item">
-                                <h4>HTML:5 <i class="fab fa-html5" aria-hidden="true"></i> <span
+                                <h4>Javascript<i class="fab fa-js" aria-hidden="true"></i> <span
                                         class="counter">70</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
@@ -151,8 +150,18 @@
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>CSS3 <i class="fab fa-css3" aria-hidden="true"></i> <span class="counter">50</span>%
+                                <h4>Node <i class="fab fa-node" aria-hidden="true"></i> <span class="counter">60</span>%
                                 </h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 60%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skill_item">
+                                <h4>React <i class="fab fa-react " aria-hidden="true"></i> <span
+                                        class="counter">50</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuemin="0"
@@ -161,17 +170,47 @@
                                 </div>
                             </div>
                             <div class="skill_item">
-                                <h4>Javascript <i class="fab fa-js " aria-hidden="true"></i> <span
-                                        class="counter">20</span>%</h4>
+                                <h4>Next Js <i class="fab fa-next " aria-hidden="true"></i> <span
+                                        class="counter">50</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
                                         <div class="progress-bar" role="progressbar" aria-valuemin="0"
-                                            aria-valuemax="100" style="width: 20%;"></div>
+                                            aria-valuemax="100" style="width: 50%;"></div>
                                     </div>
                                 </div>
                             </div>
                             <div class="skill_item">
                                 <h4>Python <i class="fab fa-python" aria-hidden="true"></i> <span
+                                        class="counter">70</span>%</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 70%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skill_item">
+                                <h4>Flask <i class="fab fa-flask" aria-hidden="true"></i> <span
+                                        class="counter">65</span>%</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 65%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skill_item">
+                                <h4>DJango <i class="fab fa-django" aria-hidden="true"></i> <span
+                                        class="counter">40</span>%</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 40%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="skill_item">
+                                <h4>Kotlin <i class="fab fa-android" aria-hidden="true"></i> <span
                                         class="counter">30</span>%</h4>
                                 <div class="progress_br">
                                     <div class="progress">
@@ -180,7 +219,16 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="skill_item">
+                                <h4>AWS <i class="fab fa-aws" aria-hidden="true"></i> <span
+                                        class="counter">60</span>%</h4>
+                                <div class="progress_br">
+                                    <div class="progress">
+                                        <div class="progress-bar" role="progressbar" aria-valuemin="0"
+                                            aria-valuemax="100" style="width: 60%;"></div>
+                                    </div>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
@@ -300,6 +348,19 @@
                                     <div class="media-body">
                                         <h4>Comienzo a certificarme</h4>
                                         <p> Flask, y api rest
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <span></span>
+                                <div class="media">
+                                    <div class="d-flex">
+                                        <p>Immune Institute <br> 2024 - 2025</p>
+                                    </div>
+                                    <div class="media-body">
+                                        <h4>Cursando Master FullStack</h4>
+                                        <p> Un año cursado, y actualmente desarrollando Capstone.
                                         </p>
                                     </div>
                                 </div>
